hphp/hack/test/typecheck/expression_trees/invalid_call3.php.exp
File "invalid_call3.php", line 6, characters 8-17:
This call is invalid, this is not a function, it is an object of type ExampleInt (Typing[4009])
